Added CSS Media Queries

--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html" title="Homepage"
-          >Jalayana Miller</a
-        >
+        <a class="navbar-brand" href="/" title="Homepage">Jalayana Miller</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,18 +43,18 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="index.html"
+                href="/"
                 title="Home"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About Me"
+              <a class="nav-link" href="/about.html" title="About Me"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact" title="Contact Me"
+              <a class="nav-link" href="/about.html#contact" title="Contact Me"
                 >Contact me</a
               >
             </li>
@@ -68,17 +66,25 @@
     <h1 class="text-center">Jalayana Miller</h1>
     <h3 class="text-center">Front-end developer, based in Asia</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link" title="Contact Me"
+      <a
+        href="/about.html#contact"
+        class="primary-link d-none d-sm-block"
+        title="Contact Me"
         >Contact me</a
       >
-      <a href="about.html" class="secondary-link" title="About Me">About me</a>
+      <a
+        href="/about.html"
+        class="secondary-link d-none d-sm-block"
+        title="About Me"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6 col-12">
           <img src="images/yoga.png" alt="yoga-app" class="img-fluid rounded" />
         </div>
-        <div class="col-6">
+        <div class="col-6 col-12">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -94,7 +100,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-6 col-12 order-md-2">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -108,7 +114,7 @@
             >
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-6 col-12 order-md-2">
           <img
             src="images/weather.png"
             alt="weather-app"
@@ -117,14 +123,14 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-6 col-12">
           <img
             src="images/yogurt.png"
             alt="yogurt-app"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6">
+        <div class="col-6 col-12">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
