--- a/about.html
+++ b/about.html
@@ -45,12 +45,12 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html" title="About Me"
+              <a class="nav-link active" href="/about.html" title="About Me"
                 >About me</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact" title="Contact Me"
+              <a class="nav-link" href="/about.html#contact" title="Contact Me"
                 >Contact me</a
               >
             </li>
