--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-6 col-12">
+        <div class="col-md-6 col-12">
           <img src="images/yoga.png" alt="yoga-app" class="img-fluid rounded" />
         </div>
-        <div class="col-6 col-12">
+        <div class="col-md-6 col-12">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6 col-12 order-md-2">
+        <div class="col-md-6 col-12 order-md-2">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -114,7 +114,7 @@
             >
           </div>
         </div>
-        <div class="col-6 col-12 order-md-2">
+        <div class="col-md-6 col-12 order-md-1">
           <img
             src="images/weather.png"
             alt="weather-app"
@@ -123,14 +123,14 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-6 col-12">
+        <div class="col-md-6 col-12">
           <img
             src="images/yogurt.png"
             alt="yogurt-app"
             class="img-fluid rounded"
           />
         </div>
-        <div class="col-6 col-12">
+        <div class="col-md-6 col-12">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
